fix. application properties for Deploy server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Redis 설정
-spring.redis.host=magica-duel.zax5hn.ng.0001.apn2.cache.amazonaws.com
+spring.redis.host=localhost
 spring.redis.port=6379
