--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,9 +2,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB 설정
-spring.datasource.url=jdbc:mysql://localhost:3306/db_magica_duel?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://magica-duel.cqv2iwkyatop.ap-northeast-2.rds.amazonaws.com:3306/db_magica_duel?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=magicaduel
 
 # JPA 설정
 spring.jpa.show-sql=true
